
  Implemented requests:

  - Online team projects
  http://sourceforge.net/support/tracker.php?aid=3513384

  - Apply penalties to external TMXs
  http://sourceforge.net/support/tracker.php?aid=3528575

----------------------------------------------------------------------
 OmegaT 2.5.4 update 2
----------------------------------------------------------------------
   2 Enhancements
   4 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
2.5.4 update 2 vs. 2.5.4 update 1

  Implemented requests:

  - Option to not load translations=source from source documents
  http://sourceforge.net/support/tracker.php?aid=3528468

  Other enhancements:

  - Fastest computation of Match Statistics. 
In addition, the first two lines are displayed as soon as they are computed

  Bug fixes:

  - Windows installer: the user language was always set in OmegaT.l4J.ini,
regardless of the choice of the user

  - Windows installer with Java: some languages not supported by OmegaT were
listed

  - Recognize single quotes in ENTITY of DTD file filter
  http://sourceforge.net/support/tracker.php?aid=3520305
(It was already implemented in 2.3 update 8, but had not been ported
to 2.5.)

  - Java Webstart was not working with Java 1.7

  Localisation updates:

  - Russian localisation updated to 2.5.4 update 1 (UI, Instant Start)

----------------------------------------------------------------------
 OmegaT 2.5.4 update 1
----------------------------------------------------------------------
   3 Enhancements
   4 Bug fixes
   4 Localisation updates
----------------------------------------------------------------------
2.5.4 update 1 vs. 2.5.4

  Implemented requests:

  - Help&Manual: hide content of tags per translate=true/false
  http://sourceforge.net/support/tracker.php?aid=3528468

  - Camtasia added tags
  http://sourceforge.net/support/tracker.php?aid=3528472

  Other enhancements:
