@@ -22,7 +22,7 @@
  OmegaT 2.5.4 update 2
 ----------------------------------------------------------------------
    2 Enhancements
-   4 Bug fixes
+   5 Bug fixes
    1 Localisation update
 ----------------------------------------------------------------------
 2.5.4 update 2 vs. 2.5.4 update 1
@@ -51,6 +51,11 @@ listed
 to 2.5.)
 
   - Java Webstart was not working with Java 1.7
+
+  - When one of the languages is an RTL language, or where setting the Editor
+in RTL mode with Shift+Ctrl+O, spaces could be wrongly located. As a workaround, 
+tags are not displayed in grey when translating an RTL language is involved or when
+the Editor is in RTL mode.
 
   Localisation updates:
 
